# tensorrtx

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: pre-commit.yml
alexnet/: FindTensorRT.cmake  alexnet.cc  alexnet.py  macros.h  utils.h
cmake/: FindTensorRT.cmake
csrnet/: CMakeLists.txt  FindTensorRT.cmake  README.md  csrnet.cpp  gen_wts.py  macros.h  utils.h
googlenet/: googlenet.cpp  utils.h
lenet/: CMakeLists.txt  lenet.cpp  macros.h  utils.h
lprnet/: lprnet.cpp  utils.h
mlp/: CMakeLists.txt  mlp.cpp  utils.h
mnasnet/: macros.h  mnasnet.cpp  utils.h
mobilenet/: CMakeLists.txt  gen_wts.py  macros.h  mobilenet.cpp  utils.h
resnet/: gen_wts.py  macros.h  resnet.cpp
shufflenetv2/: gen_wts.py  shufflenetv2.cpp  utils.h
squeezenet/: FindTensorRT.cmake  gen_wts.py  squeezenet.cpp  utils.h
tutorials/: getting_started.md  install.md
vgg/: CMakeLists.txt  README.md  gen_wts.py  logging.h  utils.h  vgg.cc
vit/: CMakeLists.txt  FindTensorRT.cmake  README.md  cuda_allocator.cc  cuda_allocator.h  gen_wts.py  macros.h  utils.h  vit.cc
